# lib-rv32

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  install-hooks.sh
.github/workflows/: build.yml  release.yml  test.yml
assembler/: CHANGELOG.md  Cargo.toml
assembler/src/: .assembler.rs.rustfmt  assembler.rs  encode.rs  error.rs  lib.rs  parse.rs  test.rs
assembler/tests/: decode.rs  harness.rs
assembler/tests/programs/: link.ld
assembler/tests/programs/mul/: init.s  mul.c
cli/: CHANGELOG.md  Cargo.toml  build-tests.sh
cli/src/: assertions.rs  bin.rs
cli/src/mcu/: memory.rs  register_file.rs
cli/tests/: assembler.rs
cli/tests/programs/: Makefile
cli/tests/programs/mul/: test_case.json
common/: Cargo.toml
common/src/: bits.rs  constants.rs  instructions.rs  lib.rs
isa-sim/: CHANGELOG.md  Cargo.toml
isa-sim/src/: decode.rs  error.rs  exec.rs  lib.rs  test.rs
isa-sim/tests/: exec.rs
mcu/: CHANGELOG.md  Cargo.toml  build-tests.sh  build.rs
mcu/programs/mul/: test_case.json
mcu/src/: lib.rs  memory.rs  register_file.rs  test_runner.rs
src/: assembler.rs  assertions.rs  bin.rs  bits.rs  constants.rs  decode.rs  encode.rs  err.rs  error.rs  exec.rs  lib.rs  traits.rs  util.rs
src/mcu/: mcu.rs  memory.rs  mod.rs  register_file.rs
tests/: assembler.rs  decode.rs  harness.rs  instructions.rs  integration.rs  programs.rs  run.rs
tests/programs/: Makefile
tests/programs/fib/: fib.c  init.s  test_case.json
tests/programs/mul/: init.s  test_case.json
wasm/: Cargo.toml
wasm/node/: index.html  package.json
wasm/src/: lib.rs  logger.rs
wasm/www/: .gitignore  index.html  index.js
web-app/: docker-compose.yml
web-app/node/: index.js
web-app/src/: lib.rs  logger.rs
