[package]
name = "lib_rv32"
description = "A library and CLI tool for emulating, testing, and learning RISC-V."
keywords = ["riscv", "testing", "simulator", "emulator"]
authors = ["Trevor McKay <tm@trmckay.com>"]
homepage = "https://github.com/trmckay/lib-rv32"
repository = "https://github.com/trmckay/lib-rv32"
version = "0.1.1"
edition = "2018"
license = "MIT"
readme = "./README.md"
include = ["/src", "/LICENSE", "/README.md"]

[dependencies]
serde_json = "1.0.*"
lazy_static = "1.4.*"
log = "0.4.*"
clap = "2.33.*"

[dev-dependencies]
glob = "0.3.*"

[lib]
name = "lib_rv32"
path = "src/lib.rs"

[[bin]]
name = "lrv-cli"
path = "src/bin.rs"
