[package]
name = "lib-rv32-asm"
description = "An extension to lib_rv32 which provides an assembler."
keywords = ["riscv", "testing", "simulator", "emulator", "assembler"]
authors = ["Trevor McKay <tm@trmckay.com>"]
homepage = "https://github.com/trmckay/lib-rv32"
repository = "https://github.com/trmckay/lib-rv32"
version = "0.1.1"
edition = "2018"
license = "MIT"
readme = "./README.md"

[lib]
name = "lib_rv32_asm"
path = "src/lib.rs"

[dependencies]
log = "0.4.*"
lib-rv32-common = { path = "../common" }
wasm-bindgen = "0.2.*"

[dev-dependencies]
lib-rv32-isa = { path = "../isa-sim" }
