[package]
name = "lib-rv32-cli"
description = "Extension to lib_rv32 that provides an MCU implementation"
keywords = ["riscv", "testing", "simulator", "emulator"]
authors = ["Trevor McKay <tm@trmckay.com>"]
homepage = "https://github.com/trmckay/lib-rv32"
repository = "https://github.com/trmckay/lib-rv32"
version = "0.2.0"
edition = "2018"
license = "MIT"
readme = "../README.md"

[[bin]]
name = "lib-rv32-cli"
path = "src/bin.rs"

[dependencies]
serde_json = "1.0.*"
lazy_static = "1.4.*"
clap = "2.33.*"
log = "0.4.*"
lib-rv32-mcu = "0.2.*"
lib-rv32-asm = "0.2.*"
