[package]
name = "lib_rv32_isa"
description = "A library and CLI tool for emulating, testing, and learning RISC-V."
keywords = ["riscv", "testing", "simulator", "emulator"]
authors = ["Trevor McKay <tm@trmckay.com>"]
homepage = "https://github.com/trmckay/lib-rv32"
repository = "https://github.com/trmckay/lib-rv32"
version = "0.1.1"
edition = "2018"
license = "MIT"
readme = "./README.md"

[dependencies]
log = "0.4.*"
lib_rv32_common = { path = "../common" }

[lib]
name = "lib_rv32_isa"
path = "src/lib.rs"
