[package]
name = "lib_rv32_mcu"
description = "A library and CLI tool for emulating, testing, and learning RISC-V."
keywords = ["riscv", "testing", "simulator", "emulator"]
authors = ["Trevor McKay <tm@trmckay.com>"]
homepage = "https://github.com/trmckay/lib-rv32"
repository = "https://github.com/trmckay/lib-rv32"
version = "0.1.1"
edition = "2018"
license = "MIT"
readme = "./README.md"

[dependencies]
log = "0.4.*"
lib_rv32_isa = { path = "../isa-sim" }

[dev-dependencies]
serde_json = "1.0.*"
glob = "0.3.*"

[lib]
name = "lib_rv32_mcu"
path = "src/lib.rs"
